Closed Bug 38445 Opened 24 years ago Closed 24 years ago

[fix in hand]Complete support of CSS2/3 cursors on Mac

Categories

(Core :: CSS Parsing and Computation, defect, P3)

PowerPC
Mac System 8.5
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: michael.j.lowe, Assigned: pierre)

References

Details

(Keywords: css2, css3, platform-parity, Whiteboard: [fix in hand] [nsbeta3+] 8/28: requested response from D. Baron prior to verification)

Implementation of CSS2 and CSS3 cursor properties needs to be completed on Mac.
  The Windows implementation of these is mostly complete now.   

Work needs to be done in nsWindow::SetCursor(nsCursor aCursor) to support the 
CSS2 and CSS3 cursors, including these cases:

      case eCursor_sizeNW:
      case eCursor_sizeSE:
      case eCursor_sizeNE:
      case eCursor_sizeSW:
      case eCursor_crosshair:
      case eCursor_move:
      case eCursor_help:

      case eCursor_copy: // CSS3
      case eCursor_alias:
      case eCursor_cell:
      case eCursor_grab:
      case eCursor_grabbing:
      case eCursor_spinning:
      case eCursor_context_menu:
      case eCursor_count_up:
      case eCursor_count_down:
      case eCursor_count_up_down:

Refer to the following URL for a test case of CSS2 cursors:

http://www.people.fas.harvard.edu/~dbaron/css/test/sec1801
Keywords: css2, css3
Keywords: pp
Blocks: 1916
Easy to fix (and it will help the RichInStyle bug count ;-)

Status: NEW → ASSIGNED
Target Milestone: --- → M17
This bug has been marked "future" because the original netscape engineer working 
on this is over-burdened. If you feel this is an error, that you or another known 
resource will be working on this bug, or if it blocks your work in some way -- 
please attach your concern to the bug for reconsideration. 

Whiteboard: [easy fix]
Target Milestone: M17 → Future
I fixed it during my spare time. Nominating nsbeta3.
Keywords: nsbeta3
Summary: Complete support of CSS2/3 cursors on Mac → [fix in hand]Complete support of CSS2/3 cursors on Mac
Whiteboard: [easy fix] → [fix in hand]
Target Milestone: Future → M18
I'd _really_ like to see this get in, even if it's not completely ready for
prime time so folks can begin to bang on it and test it, esp for support for
.cur files.
Andrew, see my comments from [2000-07-20 01:31] in bug 1916.
Do you have any description of the format of .cur files?
Approving for nsbeta3
Whiteboard: [fix in hand] → [fix in hand] [nsbeta3+]
dunno of a spec for .cur - would it be hard to support the other image formats 
that mozilla already has like .gif and .png etc?  .cur I think gets mentioned 
alot, but it seems to be like a windows-only type thing.
Fix checked in nsMacWidget.rsrc and nsWindow.cpp.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Is there any support for custom cursor feature? the <URI> part of the spec? If so 
how does it work?
Never mind, I see the comments in #1916 about uri support.
David: In your testcase, the third example, there is a 'cursor: auto' value on 
the anchor. The result is that you get an I-bar when you mouseover. Is this 
considered 'reasonable'? Everything else in the testcase works.
Whiteboard: [fix in hand] [nsbeta3+] → [fix in hand] [nsbeta3+] 8/28: requested response from D. Baron prior to verification
The result seems to me to be an I-bar over text, but a pointer when not over
text.  This seems reasonable, but I asked the CSS WG for clarification.
I will verify this as fixed. There is one minor issue that David is clarifying 
with W3.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.