Bug 38445: Complete support of CSS2/3 cursors on Mac